Fixes: NB#256225 - Service icon in presence dialog not aligned properly.

--- a/base/meegotouch/libmeegotouchviews/style/mdialogstyle.css
+++ b/base/meegotouch/libmeegotouchviews/style/mdialogstyle.css
@@ -236,3 +236,7 @@ MDialog MWidgetControllerStyle#CommonPanel:selected {
     background-color: #3D3D3D;
 }
 
+MDialog MImageWidgetStyle#CommonTitleIcon {
+    margin-top: $MARGIN_LARGE;
+}
+
